--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 <li> June 23 <br> Starting August, we will be adding Injera bread to our list of brands &#128523; &#128523;</li><br><br>
 </ul>
 </div>
+  
+  <a href="bread-shop-1.html">Test shop</a>
 </aside>
 
 
