--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
 <li> June 23 <br> Starting August, we will be adding Injera bread to our list of brands &#128523; &#128523;</li><br><br>
 </ul>
 </div>
-  
-  <a href="bread-shop-1.html">Test shop</a>
 </aside>
 
 
@@ -61,7 +59,7 @@ Yep, our customers eat foreign bread without having to leave home.
 <br><br>
 There are different brands of delicious bread to choose from. For those with a sweet tooth, who prefer sweetened bread or others who would rather eat the low-sugar brand or anything inbetween; we have brands to meet every need.
 <br><br>
-Our customers have remained loyal to us through the years because we don't let them down. They rely on us to deliver on time and in good quality. <br>
+Our customers have remained loyal to us through the years because we don't let them down. <a href="bread-shop-1.html">Test shop</a> They rely on us to deliver on time and in good quality. <br>
 We sell at our bread shop and can also deliver to your home or work place if you'd like.<br> So head over to our shop to buy now.</article>
 
 </section>
