--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <li class="y"><a href="https://plutobakery.000webhostapp.com/registration/login_form.php" target="_blank">Login</a></li>
 <li class="y"><a href="https://plutobakery.000webhostapp.com/registration/registration_form.php" target="_blank">Register</a></li>
 <li class="y"><a href="https://plutobakery.000webhostapp.com/registration/contact_form.php" target="_blank"> Contact us</a></li>
+<li class="y"><a href="https://plutobakery.000webhostapp.com/registration/contact_form.php" target="_blank"> Contact us</a></li>
 <li class="y" style="float:right;"> <?php echo "You are currently logged in as .$email"; ?></li>
 </ul>
 </navbar>
